<?xml version="1.0"?>
<package>
	<name>excercise_1</name>
	<version>1.0.0</version>
	<description>Ecercise 1</description>

	<maintainer email="Patrick.Baumann@htw-berlin.de">Patrick Baumann</maintainer>
	<license>MIT</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	
	<run_depend>rospy</run_depend>
	<run_depend>roscpp</run_depend>
 
	<export></export>
</package>
